--- a/data_miner_service/templates/data_miner_service_template.html
+++ b/data_miner_service/templates/data_miner_service_template.html
@@ -141,7 +141,11 @@
             <td>
                 <span class="indicator_exists">
                     {% if result.exists %}
+                        {% if result_subtype.grouper = "Potential Samples" %}
+                        <a href="{% url 'crits.core.views.details' 'Sample' result.exists %}">Existed</a>
+                        {% else %}
                         <a href="{% url 'crits.indicators.views.indicator' result.exists %}">Existed</a>
+                        {% endif %}
                     {% endif %}
                 </span>
             </td>
